# beers-crawler

./: .gitignore  LICENSE  PLAN.md  README.md  SESSION_HANDOFF.md  beers.example.txt  pyproject.toml
.github/workflows/: ci.yml
.pi/skills/crawler-self-learn/: SKILL.md
deploy/: DEPLOY.md  beers-crawler.service  deploy.env.example  env.example  nginx-beers-rating.conf
scripts/: deploy.sh
src/beers_crawler/: __init__.py  api.py  auth.py  cli.py  db.py  llm.py  models.py  service.py
src/beers_crawler/untappd/: __init__.py  client.py  interfaces.py  parsers.py
tests/: test_auth.py  test_db.py  test_failed_lookups.py  test_parsers.py  test_service_history.py
tests/fixtures/: search_pliny_compact.html
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  api.js  style.css
